# truthful-vqa-inference

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: gpt.sh  internvl.sh  qwenvl.sh
scripts/occlusion_high/: gemma-3-27b-it.sh  qwen2-vl-7b-grpo-8k.sh  qwen2_5-vl-7b.sh
scripts/occlusion_low/: gemma-3-27b-it.sh  qwen2-vl-7b-grpo-8k.sh  qwen2_5-vl-7b.sh
scripts/occlusion_medium/: gemma-3-27b-it.sh  qwen2-vl-7b-grpo-8k.sh  qwen2_5-vl-7b.sh
truthful_vqa_inference/benchmarks/: __init__.py  registry.py
truthful_vqa_inference/benchmarks/mmmu/: __init__.py  eval.py
truthful_vqa_inference/benchmarks/truthful_vqa/: __init__.py  eval.py
truthful_vqa_inference/benchmarks/truthful_vqa_ece/: __init__.py  eval.py
truthful_vqa_inference/benchmarks/truthful_vqa_high/: __init__.py  eval.py  utils.py
truthful_vqa_inference/benchmarks/truthful_vqa_low/: __init__.py  eval.py
truthful_vqa_inference/benchmarks/truthful_vqa_medium/: __init__.py  eval.py  utils.py
truthful_vqa_inference/client/: evaluation.py
truthful_vqa_inference/server/: __init__.py  base_server.py  registry.py
truthful_vqa_inference/server/lmdeploy/: __init__.py  lmdeploy_server.py
truthful_vqa_inference/server/vllm/: __init__.py  vllm_server.py
truthful_vqa_inference/utils/: cached_requests.py  parallel_processing.py  uuid.py
