[project]
name = "truthful-vqa-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blobfile>=3.0.0",
    "datasets>=3.5.1",
    "flash-attn>=2.7.4.post1",
    "lmdeploy>=0.7.3",
    "nvitop>=1.5.0",
    "opencv-python>=4.11.0.86",
    "qwen-vl-utils>=0.0.11",
    "ray>=2.44.1",
    "timm>=1.0.15",
    "tqdm>=4.67.1",
    "vllm>=0.8.2",
]
